--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,9 @@
   <script src="/js/bebas_400.font.js" type="text/javascript"></script>
   <script src="/js/sixsq.js" type="text/javascript"></script>
   <script src="/js/jquery.bxSlider.min.js" type="text/javascript"></script>
-  <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
+  <script src="/js/siutsur.min.js" type="text/javascript"></script>
 
-<script type="text/javascript">
+  <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-6461733-1']);
@@ -29,5 +29,5 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script>
+  </script>
 </head>
