--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,9 @@
   <div class="adress_copyright">
     <div>
       <span>SixSq.</span>
-      <br />15 rue du Pré-de-la-Fontaine
-      <br />1217, Geneva
+      <br />Rue du Bois-du-Lan, 8
+      <br />1217, Meyrin
+      <br />Geneva
       <br />Switzerland
     </div>
     <div class="copyright">&copy; 2007-2012, SixSq Sàrl. All rights reserved.</div>
