--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -39,7 +39,7 @@
             <div class="date">{{ page.date | date: "%d %B %Y" }}</div>
             {% endif %}
             {% if page.author %}
-            <div class="author">{{ page.author }}</div>
+            <div class="date">{{ page.date | date: "%d %B %Y" }} - by {{ page.author }}</div>
             {% endif %}
 
             <div class="article">
