--- a/_includes/latest.html
+++ b/_includes/latest.html
@@ -12,13 +12,12 @@
       $(function() {
         Siutsur.load('356005667552768001', function(obj) {
           var html = '';
-          var trimLength = 50;
+          var trimLength = 60;
           $(obj).slice(0,2).each(function(i, tweet) {
               var post = '<p>' + tweet.title.plain.slice(0,trimLength);
               if (tweet.title.plain.length > trimLength) {
                   post += '...'
               }
-              post += ' (' + tweet.user.nickname + ')' + '</p>'
               html += post;
           });
           $('#latest-tweets').html(html);
@@ -28,7 +27,7 @@
       });
     </script>
   
-  <a href="http://twitter.com/sixsq">Learn more</a>
+  <a href="http://twitter.com/sixsq">See more</a>
 
 </div>
 
