Add google+ link and icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,9 @@
     <a href="/blog/index.html">
         <img src="img/design/icon_blog.png" />
     </a>
+    <a href="https://plus.google.com/110972550523840352171" rel="publisher">
+        <img src="img/design/google+.png" style="width: 24px; height: 24px;" />
+    </a>
   </div>
 
 </div>
