Add personae and standardise front page

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -9,7 +9,7 @@
       <li><a href="/customers/index.html">Customers</a></li>
       <li><a href="/blog/index.html">Blog</a></li>
 <!--      <li><a href="/jobs/index.html">Jobs</a></li> -->
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="/contact.html">Help</a></li>
     </ul>
   </div>
 </div>
