--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -31,8 +31,10 @@
 
       <div id="content">
         
+        {% include front-personae.html %}
+
         {% include front-products.html %}
-        
+
         {% include front-latest.html %}
         
         {% include customers.html %}
