--- a/_includes/front-products.html
+++ b/_includes/front-products.html
@@ -1,3 +1,6 @@
+<div class="front-section-title">
+    <div>Our products and services</div>
+</div>
 <div class="front products">
   {% include products.html %}
 </div>
