--- a/_includes/personae.html
+++ b/_includes/personae.html
@@ -11,7 +11,7 @@
     <p>{{ post.content | markdownify | strip_html | truncatewords: 14 }}</p>
   {% endif %}
   
-  <a href="{{ post.url }}">Learn more</a>
+  <a href="{{ post.url }}">Tell me more</a>
   {% if post.tryme  %}
   <a href="{{ post.tryme }}">Try me</a>
   {% endif %}
