--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -31,7 +31,7 @@
 
       <div id="content">
         
-        {% include front-personae.html %}
+        <!--{% include front-personae.html %}-->
 
         {% include front-products.html %}
 
