Center image title

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -39,7 +39,9 @@
           
           <div class="main">
             {% if page.title_gfx %}
-            <img src="{{ page.title_gfx }}" alt="{{ page.title }}" /> 
+			<p align="center">
+            	<img src="{{ page.title_gfx }}" alt="{{ page.title }}" />
+			</p>
             {% else %}
             <h1 class="list_title">{{ page.title }}</h1>
             {% endif %}
