--- a/sixsq.css
+++ b/sixsq.css
@@ -626,7 +626,7 @@ img {
 	color: #9b9b9b;
 }
 
-.sidebar.latest div {
+.sidebar.latest > div {
 	position: relative;
 	display: block;
 	width: 223px;
