--- a/sixsq.css
+++ b/sixsq.css
@@ -22,6 +22,16 @@ img {
 	border: none;
 }
 
+pre {
+	background-color: #F8F8F8;
+	border: 1px solid #CCC;
+	border-radius: 3px;
+	font-size: 13px;
+	line-height: 19px;
+	overflow: auto;
+	padding: 6px 10px;
+}
+
 #wrapper {
 	position: relative;
 	width: 1008px;
