--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,15 +1,16 @@
 <div class="top">
-  <div class="logo"></div>
   <div class="menu_bar">
     <ul>
       <li class="home"><a href="/index.html"></a></li>
-      <li class="about"><a href="/about-us.html">About Us</a></li>
-      <li><a href="/products/index.html">Products</a></li>
-      <li><a href="/news/index.html">News</a></li>
-      <li><a href="/customers/index.html">Customers</a></li>
-      <li><a href="/blog/index.html">Blog</a></li>
+      <li id="menu_slipstream"><a href="/products/slipstream.html">SlipStream</a></li>
+      <li id="menu_nuvlabox"><a href="/products/nuvlabox.html">NuvlaBox</a></li>
+      <li id="menu_products"><a href="/products/index.html">Products</a></li>
+      <li id="menu_blog"><a href="/blog/index.html">Blog</a></li>
+      <li id="menu_news"><a href="/news/index.html">News</a></li>
+      <li id="menu_customers"><a href="/customers/index.html">Customers</a></li>
 <!--      <li><a href="/jobs/index.html">Jobs</a></li> -->
-      <li><a href="/contact.html">Help</a></li>
+      <li id="menu_about"><a href="/about-us.html">About Us</a></li>
+      <li id="menu_contact"><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 </div>
