--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -27,11 +27,6 @@
       <div id="content">
         <div class="content_bg">
 
-          <div class="breadcrumb">
-            <a href="/" class="first">Home</a>
-            <a href="{{ page.url }}" class="current">{{ page.title }}</a>
-          </div>
-          
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
             
@@ -71,6 +66,8 @@
       {% include footer.html %}
 
     </div>
+
+    <script type="text/javascript">$("#menu_{{ downcase_title }} > a").addClass("current");</script>
 
   </body>
 </html>
