--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -27,12 +27,7 @@
       <div id="content">
         <div class="content_bg">
 
-          <div class="breadcrumb">
-            <a href="/index.html" class="first">Home</a>
-            <a href="{{ page.url }}" class="current">{{ page.title }}</a>
-          </div>
-          
-          <div class="main">
+          <div class="main twothirdscolumn">
             <h1 class="list_title">{{ page.title }}</h1>
 
             {{ page.content | markdownify }}
@@ -49,6 +44,8 @@
       {% include footer.html %}
 
     </div>
+
+    <script type="text/javascript">$("#menu_{{ page.class }} > a").addClass("current");</script>
 
   </body>
 </html>
