Add 'print' as Media Type for the CSS.
This allows to use the same CSS when printing the page, so that the printed page has the same look and field as the page on screen.

See http://www.w3schools.com/css/css_mediatypes.asp

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
   <base href="/" />
   
-  <link rel="stylesheet" type="text/css" href="/sixsq.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/sixsq.css" media="screen,print" />
 
   <script src="/js/jquery.1.7.0.min.js" type="text/javascript"></script>
   <script src="/js/cufon-yui.js" type="text/javascript"></script>
