Clean-up welcome page and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,30 +3,33 @@
   <div class="footer_menu">
     <ul>
       <li><a href="/index.html">Home</a></li>
-      <li><a href="/about-us.html">About Us</a></li>
+      <li><a href="/products/slipstream.html">SlipStream</a></li>
+      <li><a href="/products/nuvlabox.html">NuvlaBox</a></li>
       <li><a href="/products/index.html">Products</a></li>
+      <li><a href="/blog/index.html">Blog</a></li>
       <li><a href="/news/index.html">News</a></li>
       <li><a href="/customers/index.html">Customers</a></li>
+      <li><a href="/about-us.html">About Us</a></li>
       <li><a href="/contact.html">Contact</a></li>
     </ul>
   </div>
 
-  <div class="adress_copyright">
-    <div>
+  <div class="address_copyright">
+    <div style="color: #EDEDED">
       <span>SixSq.</span>
       <br />Rue du Bois-du-Lan, 8
       <br />1217, Meyrin
       <br />Geneva
       <br />Switzerland
     </div>
-    <div class="copyright">&copy; 2007-2014, SixSq Sàrl. All rights reserved.</div>
-    <div class="design">Design by <a href="http://www.penceo.com">Penceo</a></div>
+    <div class="copyright">Copyright &copy; 2014 SixSq Sàrl. All rights reserved.</div>
+    <div>SixSq and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
   </div>
 
   <div class="contact_us">
     <div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
-    <div class="phone">info: +41 77 44 68 119<br />support: +41 22 57 52 229</div>
-    <div class="mail"><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a>
+    <div>info: +41 77 44 68 119<br />support: +41 22 57 52 229</div>
+    <div><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a>
 	</div>
   </div>
 
