Include pricing page and latest gfx Introduced sub-folders for post types Remove customer widget from most pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
       <br />Switzerland
     </div>
     <div class="copyright">Copyright &copy; 2014 SixSq Sàrl. All rights reserved.</div>
-    <div>SixSq and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
+    <div>SixSq, SlipStream and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
   </div>
 
   <div class="contact_us">
