--- a/sixsq.css
+++ b/sixsq.css
@@ -1078,3 +1078,8 @@ h1.slogan {
 	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
 	box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset; 
 }
+
+.soon {
+	background: transparent url(img/design/soon_label.png) no-repeat scroll left top !important;
+}
+
