Enhanced SixSq icon in the top bar.
@mebster Please review.

The border of the previous icon was blurred.
I left this previous icon for the hover image, as it makes a nice press
effect.

--- a/sixsq.css
+++ b/sixsq.css
@@ -188,7 +188,7 @@ img {
 
 .menu_bar ul li.home a.active,
 .menu_bar ul li.home a:hover {
-	background: transparent url(img/design/home.png) no-repeat scroll 25px center;
+	background: transparent url(img/design/home_hover.png) no-repeat scroll 25px center;
 }
 
 nav a.current {
