Enhance SixSq address in footer, with logo.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,11 +13,15 @@
 
   <div class="adress_copyright">
     <div>
-      <span>SixSq.</span>
-      <br />Rue du Bois-du-Lan, 8
-      <br />1217, Meyrin
-      <br />Geneva
-      <br />Switzerland
+      <div class="footer_logo">
+        <img src="img/design/sixsq_logo_white_on_transparent_46px.png"/>
+      </div>
+      <p>
+        Rue du Bois-du-Lan, 8
+        <br />1217, Geneva
+        <br />Switzerland
+        <br />
+      </p>
     </div>
     <div class="copyright">&copy; 2007-2014, SixSq Sàrl. All rights reserved.</div>
     <div class="design">Design by <a href="http://www.penceo.com">Penceo</a></div>
