--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,17 +15,18 @@
   </div>
 
   <div class="adress_copyright">
-    <div>
+    <div style="color: #EDEDED">
       <div class="footer_logo">
         <img src="img/design/sixsq_logo_white_on_transparent_46px.png"/>
       </div>
-      <p>
-        Rue du Bois-du-Lan, 8
+      <div>
+        SixSq.
+        <br />Rue du Bois-du-Lan, 8
         <br />1217, Geneva
         <br />Switzerland
-        <br />
-      </p>
+      </div>
     </div>
+    <br />
     <div class="copyright">Copyright &copy; 2014 SixSq Sàrl. All rights reserved.</div>
     <div>SixSq, SlipStream and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
   </div>
