--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
 
   <div class="follow_us">
     <div>Follow us on:</div>
-    <a href="http://twitter.com/#!/sixsq">
+    <a href="http://twitter.com/sixsq">
         <img src="img/design/icon_twitter.png" />
     </a>
     <a href="/blog/index.html">
