--- a/sixsq.css
+++ b/sixsq.css
@@ -90,7 +90,7 @@ img {
 }
 
 .main nav ul li a {
-    margin-left:24px; 
+    margin-left:24px;
 }
 
 .date {
@@ -839,30 +839,30 @@ nav a.current {
    height: 64px;
    width: 64px;
    display: inline-block;
-   background-image: url(img/design/twitter_logo_white_on_transparent_48px.png);
+   background-image: url(img/design/social_logos/twitter.png);
    background-repeat: no-repeat;
    background-position: center;
 }
 
 #footer_logo_twitter:hover {
-    background-image: url(img/design/twitter_logo_blue_on_transparent_48px.png);
- 	background-repeat: no-repeat;
-	background-position: center;
+    background-image: url(img/design/social_logos/twitter_hover.png);
+ 	/*background-repeat: no-repeat;*/
+	/*background-position: center;*/
 }
 
 #footer_logo_googleplus {
    height: 64px;
    width: 64px;
    display: inline-block;
-   background-image: url(img/design/googleplus_logo_transparent_on_white_48px.png);
+   background-image: url(img/design/social_logos/googleplus.png);
    background-repeat: no-repeat;
    background-position: center;
 }
 
 #footer_logo_googleplus:hover {
-    background-image: url(img/design/googleplus_logo_white_on_red_48px.png);
- 	background-repeat: no-repeat;
-	background-position: center;
+    background-image: url(img/design/social_logos/googleplus_hover.png);
+ 	/*background-repeat: no-repeat;*/
+	/*background-position: center;*/
 }
 
 .adress_copyright {
@@ -957,12 +957,12 @@ h1.slogan {
 
 #pricing-table .plan {
 	font: 12px 'Lucida Sans', 'trebuchet MS', Arial, Helvetica;
-	text-shadow: 0 1px rgba(255,255,255,.8);        
+	text-shadow: 0 1px rgba(255,255,255,.8);
 	background: #fff;
 	border: 1px solid #ddd;
 	color: #333;
 	padding: 20px;
-	width: 180px; /* plan width = 180 + 20 + 20 + 1 + 1 = 222px */      
+	width: 180px; /* plan width = 180 + 20 + 20 + 1 + 1 = 222px */
 	float: left;
 	position: relative;
 }
@@ -977,22 +977,22 @@ h1.slogan {
 	border-radius: 5px;
 	-moz-box-shadow: 20px 0 10px -10px rgba(0, 0, 0, .15), -20px 0 10px -10px rgba(0, 0, 0, .15);
 	-webkit-box-shadow: 20px 0 10px -10px rgba(0, 0, 0, .15), -20px 0 10px -10px rgba(0, 0, 0, .15);
-	box-shadow: 20px 0 10px -10px rgba(0, 0, 0, .15), -20px 0 10px -10px rgba(0, 0, 0, .15);    
+	box-shadow: 20px 0 10px -10px rgba(0, 0, 0, .15), -20px 0 10px -10px rgba(0, 0, 0, .15);
 }
 
 #pricing-table .plan:nth-child(1) {
 	-moz-border-radius: 5px 0 0 5px;
 	-webkit-border-radius: 5px 0 0 5px;
-	border-radius: 5px 0 0 5px;        
+	border-radius: 5px 0 0 5px;
 }
 
 #pricing-table .plan:nth-child(4) {
 	-moz-border-radius: 0 5px 5px 0;
 	-webkit-border-radius: 0 5px 5px 0;
-	border-radius: 0 5px 5px 0;        
+	border-radius: 0 5px 5px 0;
 }
 
-/* --------------- */	
+/* --------------- */
 
 #pricing-table h3 {
 	font-size: 20px;
@@ -1001,7 +1001,7 @@ h1.slogan {
 	margin: -20px -20px 50px -20px;
 	background-color: #eee;
 	background-image: -moz-linear-gradient(#fff,#eee);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));    
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
 	background-image: -webkit-linear-gradient(#fff, #eee);
 	background-image: -o-linear-gradient(#fff, #eee);
 	background-image: -ms-linear-gradient(#fff, #eee);
@@ -1015,7 +1015,7 @@ h1.slogan {
 	margin: -20px -20px 50px -20px;
 	background-color: #eee;
 	background-image: url(img/design/soon_label.png), -moz-linear-gradient(#fff,#eee);
-	background-image: url(img/design/soon_label.png), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));    
+	background-image: url(img/design/soon_label.png), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
 	background-image: url(img/design/soon_label.png), -webkit-linear-gradient(#fff, #eee);
 	background-image: url(img/design/soon_label.png), -o-linear-gradient(#fff, #eee);
 	background-image: url(img/design/soon_label.png), -ms-linear-gradient(#fff, #eee);
@@ -1027,7 +1027,7 @@ h1.slogan {
 #pricing-table #most-popular h3 {
 	background-color: #ddd;
 	background-image: -moz-linear-gradient(#eee,#ddd);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ddd));    
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ddd));
 	background-image: -webkit-linear-gradient(#eee, #ddd);
 	background-image: -o-linear-gradient(#eee, #ddd);
 	background-image: -ms-linear-gradient(#eee, #ddd);
@@ -1036,20 +1036,20 @@ h1.slogan {
 	padding-top: 30px;
 	-moz-border-radius: 5px 5px 0 0;
 	-webkit-border-radius: 5px 5px 0 0;
-	border-radius: 5px 5px 0 0; 		
+	border-radius: 5px 5px 0 0;
 }
 
 #pricing-table .plan:nth-child(1) h3 {
 	-moz-border-radius: 5px 0 0 0;
 	-webkit-border-radius: 5px 0 0 0;
-	border-radius: 5px 0 0 0;       
+	border-radius: 5px 0 0 0;
 }
 
 #pricing-table .plan:nth-child(4) h3 {
 	-moz-border-radius: 0 5px 0 0;
 	-webkit-border-radius: 0 5px 0 0;
-	border-radius: 0 5px 0 0;       
-}	
+	border-radius: 0 5px 0 0;
+}
 
 #pricing-table h3 span {
 	display: block;
@@ -1092,27 +1092,27 @@ h1.slogan {
 }
 
 /* --------------- */
-	
+
 #pricing-table .signup {
 	position: relative;
 	padding: 8px 20px;
-	margin: 20px 0 0 0;  
+	margin: 20px 0 0 0;
 	color: #fff;
 	font: bold 14px Arial, Helvetica;
 	text-transform: uppercase;
 	text-decoration: none;
-	display: inline-block;       
+	display: inline-block;
 	background-color: #72ce3f;
 	background-image: -moz-linear-gradient(#72ce3f, #62bc30);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#72ce3f), to(#62bc30));    
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#72ce3f), to(#62bc30));
 	background-image: -webkit-linear-gradient(#72ce3f, #62bc30);
 	background-image: -o-linear-gradient(#72ce3f, #62bc30);
 	background-image: -ms-linear-gradient(#72ce3f, #62bc30);
 	background-image: linear-gradient(#72ce3f, #62bc30);
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
-	border-radius: 3px;     
-	text-shadow: 0 1px 0 rgba(0,0,0,.3);        
+	border-radius: 3px;
+	text-shadow: 0 1px 0 rgba(0,0,0,.3);
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
 	box-shadow: 0 1px 0 rgba(255, 255, 255, .5), 0 2px 0 rgba(0, 0, 0, .7);
@@ -1121,19 +1121,19 @@ h1.slogan {
 #pricing-table .signup:hover {
 	background-color: #62bc30;
 	background-image: -moz-linear-gradient(#62bc30, #72ce3f);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#62bc30), to(#72ce3f));      
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#62bc30), to(#72ce3f));
 	background-image: -webkit-linear-gradient(#62bc30, #72ce3f);
 	background-image: -o-linear-gradient(#62bc30, #72ce3f);
 	background-image: -ms-linear-gradient(#62bc30, #72ce3f);
-	background-image: linear-gradient(#62bc30, #72ce3f); 
+	background-image: linear-gradient(#62bc30, #72ce3f);
 }
 
 #pricing-table .signup:active, #pricing-table .signup:focus {
-	background: #62bc30;       
+	background: #62bc30;
 	top: 2px;
 	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
 	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
-	box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset; 
+	box-shadow: 0 0 3px rgba(0, 0, 0, .7) inset;
 }
 
 .create-account {
