--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,9 @@
 
   <div class="follow_us">
     <div>Follow us on:</div>
+    <a href="http://www.linkedin.com/company/sixsq">
+        <div id="footer_logo_linkedin">&nbsp;</div>
+    </a>
     <a href="http://twitter.com/sixsq">
         <div id="footer_logo_twitter">&nbsp;</div>
     </a>
@@ -47,5 +50,4 @@
         <div id="footer_logo_googleplus">&nbsp;</div>
     </a>
   </div>
-
 </div>
