Add 'Launch at MWC' label to NuvlaBox overview and princing tabs.
@mebster Please review and merge to master if necessary. Cheers.

--- a/sixsq.css
+++ b/sixsq.css
@@ -26,6 +26,13 @@ img {
 	border: none;
 }
 
+.launch_at_mwc {
+	background-repeat: no-repeat;
+	background-position: top left;
+	background-image: url(img/content/mobile-world-congress-launch-label.png);
+}
+
+
 #wrapper {
 	position: relative;
 	width: 1008px;
