--- a/sixsq.css
+++ b/sixsq.css
@@ -26,12 +26,11 @@ img {
 	border: none;
 }
 
-.launch_at_mwc {
+.launch-at-mwc {
 	background-repeat: no-repeat;
 	background-position: top left;
 	background-image: url(img/content/mobile-world-congress-launch-label.png);
 }
-
 
 #wrapper {
 	position: relative;
