Add google+ slipstream ancor

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,5 +49,6 @@
     <a href="https://plus.google.com/115601684384239978812/posts" rel="publisher">
         <div id="footer_logo_googleplus">&nbsp;</div>
     </a>
+    <a href="https://plus.google.com/108071645051225999698" rel="publisher">Google+</a>
   </div>
 </div>
