Add contact-us and order-now buttons and dialogs Also update to latest jquey and adjust banner logic

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,9 @@
   <base href="/" />
   
   <link rel="stylesheet" type="text/css" href="/sixsq.css" media="screen,print" />
-
-  <script src="/js/jquery.1.7.0.min.js" type="text/javascript"></script>
+  <link href="/css/jquery-ui.css" rel="stylesheet">
+  <script src="/js/jquery.js" type="text/javascript"></script>
+  <script src="/js/jquery-ui.js" type="text/javascript"></script>
   <script src="/js/cufon-yui.js" type="text/javascript"></script>
   <script src="/js/helveticaneue_300-helveticaneue_700.font.js" type="text/javascript"></script>
   <script src="/js/bebas_400.font.js" type="text/javascript"></script>
