--- a/_includes/top.html
+++ b/_includes/top.html
@@ -15,3 +15,7 @@
   </div>
 </div>
 
+<div id="error-dialog" title="Error">
+	An error occurred while sending the form. Please check your internet connection and if the problem persists, please
+	let <a href="mailto:support@sixsq.com">us know</a>.
+</div>
