--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,20 @@
 <div id="footer">
 
+  <div id='contact-us-thanks-dialog'>
+  Thank you very much for your enquiry. We will be in touch shortly.
+  </div>
+  <div id='contact-us-dialog'>
+    <form id='contact-us-form' action='http://getsimpleform.com/messages/ajax?form_api_token=7673c6c3500a57c2403047aaa5ba9ca4' method='post'>
+      <input class='hidden' type='text' name='subject' value='enquiry' ></input>
+      <br/>
+      You email: <input type='text' name='email' placeholder='me@example.com'></input>
+      <br/>
+      <br/>
+      Question:
+      <textarea type='text' name='message' placeholder='What can we help you with?...'></textarea>
+    </form>
+  </div>
+
   <div class="footer_menu">
     <ul>
       <li><a href="/index.html">Home</a></li>
@@ -33,9 +48,9 @@
 
   <div class="contact_us">
     <div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
-    <div>info: +41 77 44 68 119<br />support: +41 22 57 52 229</div>
-    <div><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a>
-	</div>
+    <div><a href onclick="$('#contact-us-dialog').dialog('open');return false;">Fill form</a></div>
+    <div>info: +41 77 44 68 170<br />support: +41 22 57 52 229</div>
+    <div><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a></div>
   </div>
 
   <div class="follow_us">
