--- a/sixsq.css
+++ b/sixsq.css
@@ -80,6 +80,7 @@ img {
 .main nav {
     overflow: hidden;
     border-bottom: 1px solid #e6e6e6;
+    padding-right: 25px;
 	padding-bottom: 5px;
 }
 
@@ -240,8 +241,6 @@ nav a.current {
 .bx-wrapper .bx-pager .bx-pager-item,
 .bx-wrapper .bx-controls-auto .bx-controls-auto-item {
 	display: inline-block;
-	*zoom: 1;
-	*display: inline;
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a {
@@ -260,6 +259,10 @@ nav a.current {
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
 	background: #000;
+}
+
+div.bx-viewport {
+	height: 200px !important;
 }
 
 #slider1 {
