--- a/sixsq.css
+++ b/sixsq.css
@@ -233,6 +233,7 @@ nav a.current {
 	font-weight: bold;
 	color: #666;
 	padding-top: 20px;
+	padding-left: 3px;
 	position: absolute;
 	top: 240px;
 	left: 460Px;
