--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -30,12 +30,11 @@
           <div class="main">
             <h1 class="list_title">{{ page.title }}</h1>
             
-            {% capture downcase_title %}{{page.title | downcase}}{% endcapture %} 
             <div class="list_news">
               <ul>
                 
                 {% for post in site.posts %}
-                {% if post.category == downcase_title %}
+                {% if post.category == page.category %}
                 <li>
 	          <img src="{{ post.image }}" />
                   <a href="{{ post.url }}" class="title">{{ post.title }}</a>
@@ -65,7 +64,7 @@
 
     </div>
 
-    <script type="text/javascript">$("#menu_{{ downcase_title }} > a").addClass("current");</script>
+    <script type="text/javascript">$("#menu_{{ page.category }} > a").addClass("current");</script>
 
   </body>
 </html>
