--- a/sixsq.css
+++ b/sixsq.css
@@ -1265,3 +1265,30 @@ textarea {
 	width: 100%; 
 	height: 7em; 
 }
+
+code {
+    text-decoration: inherit;
+    vertical-align: text-top
+}
+
+pre > code {
+    margin: 0;
+    padding: 0;
+    white-space: pre;
+    border: none;
+    background: transparent
+}
+
+pre {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    font-size: 13px;
+    line-height: 19px;
+    overflow: auto;
+    padding: 6px 10px;
+    border-radius: 3px
+}
+
+pre {
+    word-wrap: normal
+}
