--- a/sixsq.css
+++ b/sixsq.css
@@ -26,6 +26,14 @@ img {
 	border: none;
 }
 
+ol ol {
+    list-style-type: lower-alpha;
+}
+
+ol ol ol {
+    list-style-type: lower-roman;
+}
+
 .launch-at-mwc {
 	background-repeat: no-repeat;
 	background-position: top left;
@@ -1265,3 +1273,4 @@ textarea {
 	width: 100%; 
 	height: 7em; 
 }
+
