Add missing href value

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,7 +48,7 @@
 
   <div class="contact_us">
     <div><span>Contact us</span><br />Need information? Give feedback?<br />Get in touch.</div>
-    <div><a href onclick="$('#contact-us-dialog').dialog('open');return false;">Fill form</a></div>
+    <div><a href="#" onclick="$('#contact-us-dialog').dialog('open');return false;">Fill form</a></div>
     <div>info: +41 77 44 68 170<br />support: +41 22 57 52 229</div>
     <div><a href="mailto:info@sixsq.com">info@sixsq.com</a><br /><a href="mailto:support@sixsq.com">support@sixsq.com</a></div>
   </div>
