--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,23 +30,51 @@
 
   </script>
 
-<!-- Google Code for Contact form Conversion Page -->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = 971399996;
-var google_conversion_language = "en";
-var google_conversion_format = "3";
-var google_conversion_color = "ffffff";
-var google_conversion_label = "KqWPCJz4hwkQvMaZzwM";
-var google_remarketing_only = false;
-/* ]]> */
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/971399996/?label=KqWPCJz4hwkQvMaZzwM&amp;guid=ON&amp;script=0"/>
-</div>
-</noscript>
+  <!-- Google Code for Contact form Conversion Page -->
+  <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 971399996;
+    var google_conversion_language = "en";
+    var google_conversion_format = "3";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "KqWPCJz4hwkQvMaZzwM";
+    var google_remarketing_only = false;
+    /* ]]> */
+  </script>
+  <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
+  
+  <noscript>
+    <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/971399996/?label=KqWPCJz4hwkQvMaZzwM&amp;guid=ON&amp;script=0"/>
+    </div>
+  </noscript>
+
+{% if page.title and page.summary %}
+  {% if page.category == 'products' and (page.image or page.twitter-image) and page.twitter-highlight-1-title and page.twitter-highlight-1-content and page.twitter-highlight-2-title and page.twitter-highlight-2-content %}
+  <meta name="twitter:card" content="product">
+  {% else %}
+  <meta name="twitter:card" content="summary">
+  {% endif %}
+  <meta name="twitter:site" content="@sixsq">
+  {% if page.twitter-author %}
+  <meta name="twitter:creator" content="{{ page.twitter-author }}">
+  {% endif %}
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.summary }}">
+  {% if page.twitter-image %}
+    {% assign twitter-image = page.twitter-image %}
+  {% elsif page.image %}
+    {% assign twitter-image = page.image %}
+  {% endif %}
+  {% if twitter-image %}
+  <meta name="twitter:image" content="http://sixsq.com{{ twitter-image }}">
+  {% endif %}
+  {% if page.category == 'products' and (page.image or page.twitter-image) and page.twitter-highlight-1-title and page.twitter-highlight-1-content and page.twitter-highlight-2-title and page.twitter-highlight-2-content %}
+  <meta name="twitter:data1" content="{{ page.twitter-highlight-1-title }}">
+  <meta name="twitter:label1" content="{{ page.twitter-highlight-1-content }}">
+  <meta name="twitter:data2" content="{{ page.twitter-highlight-2-title }}">
+  <meta name="twitter:label2" content="{{ page.twitter-highlight-2-content }}">
+  {% endif %}
+{% endif %}
 
 </head>
