Add North America address Can we bring back the SixSq logo in the footer?

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,15 +30,23 @@
   </div>
 
   <div class="adress_copyright">
+    <div><span>Global Headquarters:</span></div>
     <div style="color: #EDEDED">
-      <div class="footer_logo">
-        <img src="/img/design/sixsq_logo_white_on_transparent_52px.png"/>
-      </div>
       <div>
         SixSq.
         <br />Rue du Bois-du-Lan, 8
         <br />1217, Geneva
         <br />Switzerland
+      </div>
+    </div>
+    <br />
+    <div><span>North American Headquarters:</span></div>
+    <div style="color: #EDEDED">
+      <div>
+        SixSq.
+        <br />6700 Côte de Liesse, Suite 105  
+        <br />Montréal, Québec, H4T-2B5    
+        <br />Canada
       </div>
     </div>
     <br />
