--- a/_layouts/article_slipstream.html
+++ b/_layouts/article_slipstream.html
@@ -32,30 +32,13 @@
                 <nav>
                     <h1 class="list_title">{{ page.title }}</h1>
                     <ul>
-                        {% if page.overview %}
-                        <li id="sub_overview"><a href="{{ page.overview }}">Overview</a></li>
-                        {% endif %}
-                        {% if page.usecases %}
-                        <li id="sub_usecases"><a href="{{ page.usecases }}">Use Cases</a></li>
-                        {% endif %}
-                        {% if page.features %}
-                        <li id="sub_features"><a href="{{ page.features }}">Features</a></li>
-                        {% endif %}
-                        {% if page.business %}
-                        <li id="sub_business"><a href="{{ page.business }}">Business Benefits</a></li>
-                        {% endif %}
-                        {% if page.tryme %}
-                        <li id="sub_tryme"><a href="{{ page.tryme }}">Try Me</a></li>
-                        {% endif %}
-                        {% if page.techspecs %}
-                        <li id="sub_techspecs"><a href="{{ page.techspecs }}">Tech Specs</a></li>
-                        {% endif %}
-                        {% if page.pricing %}
-                        <li id="sub_pricing"><a href="{{ page.pricing }}">Pricing</a></li>
-                        {% endif %}
-                        {% if page.buynow %}
-                        <li id="sub_buynow"><a href="{{ page.buynow }}">Buy Now</a></li>
-                        {% endif %}
+                        <li id="sub_overview"><a href="/products/slipstream.html">Overview</a></li>
+<!--                        <li id="sub_usecases"><a href="/products/slipstream-usecases.html">Use Cases</a></li> -->
+                        <li id="sub_features"><a href="/products/slipstream-features.html">Features</a></li>
+                        <li id="sub_business"><a href="/products/slipstream-business.html">Business Benefits</a></li>
+                        <li id="sub_tryme"><a href="/products/slipstream-tryme.html">Try Me</a></li>
+                        <li id="sub_techspecs"><a href="/products/slipstream-tech.html">Tech Specs</a></li>
+                        <li id="sub_pricing"><a href="/products/slipstream-pricing.html">Pricing</a></li>
                     </ul>
                 </nav>
             {% if page.category == "news" %}
@@ -96,13 +79,7 @@
 
     </div>
 
-    {% if page.class == "slipstream" %}
     <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
-    {% elsif page.class == "nuvlabox"" %}
-    <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
-    {% else %}
-    <script type="text/javascript">$("#menu_{{ page.category }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
-    {% endif %}
 
   </body>
 </html>
