--- a/sixsq.css
+++ b/sixsq.css
@@ -527,7 +527,7 @@ div.bx-viewport {
 }
 
 .products div h2 {
-	margin: 25px 0px;
+	margin: 25px 0px 10px 0px;
 	line-height: 1;
 	letter-spacing: -2px;
 	font-size: 38px;
@@ -664,7 +664,7 @@ div.bx-viewport {
 .list_news img {
 	float: left;
 	margin-right: 20px;
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .list_news a.title,
@@ -693,6 +693,50 @@ div.bx-viewport {
 .list_news .date {
 	width: 467px;
 	margin-top: 0px;
+}
+
+/* Use cases */
+
+.list_usecases, .list_users {
+  border: 1px solid #CCC;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  list-style: none;
+  margin: 15px 0 20px 0;
+  padding: 5px 0px 5px 25px;
+  background-color: #E2E2E2;
+}
+
+.list_usecases div, .list_users div {
+  float: left;
+  margin: 0 3% 15px 0;
+  width: 30%;
+}
+
+.list_usecases h5, .list_users h5 {
+  color: #353d17;
+  margin: 0 0 6px;    
+}
+
+.list_usecases a:link, .list_usecases a:visited {
+	color: #232323;
+}
+
+.list_usecases a:hover {
+	color: gray;
+}
+
+.list_usecases section {
+  height: 60px;
+}
+
+/* Users */
+
+.list_users div {
+  float: left;
+  margin: 0 3% 15px 0;
+  width: 47%;
 }
 
 .article {
@@ -1307,3 +1351,16 @@ pre {
    margin: 5px;
 }
 
+/* Micro clearfix */ 
+.clearfix:before, .clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    zoom: 1;
+}
